bpo-44640: Fix typos of isinstance() and issubclass() error messages