Objects/abstract.c
@@ -2529,7 +2529,7 @@ object_isinstance(PyObject *inst, PyObject *cls)
     }
     else {
         if (!check_class(cls,
-            "isinstance() arg 2 must be a type, a tuple of types or a union"))
+            "isinstance() arg 2 must be a type, a tuple of types or an union"))
             return -1;
         retval = _PyObject_LookupAttrId(inst, &PyId___class__, &icls);
         if (icls != NULL) {
@@ -2627,7 +2627,7 @@ recursive_issubclass(PyObject *derived, PyObject *cls)
     int is_union = (PyType_Check(type) && type == &_Py_UnionType);
     if (!is_union && !check_class(cls,
                             "issubclass() arg 2 must be a class,"
-                            " a tuple of classes, or a union.")) {
+                            " a tuple of classes or an union")) {
         return -1;
     }
 
